--- a/Primer diseño/index.html
+++ b/Primer diseño/index.html
@@ -5,21 +5,118 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>Mockup de proyecto final</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet"> 
+	    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+	    <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-            <select id="menuConsultas" onchange="opcionSeleccionada()">
-                <option disabled=""> --Consulta a realizar-- </option>
-                <option value ="c1">Obtener los primeros 3 empleados que han tenido las mayores ventas totales del año pasado</option>
-                <option value ="c2">El vendedor que vendió más por territorio</option>
-                <option value="c3">Contar las órdenes de venta por tipo de envío</option>
-                <option value="c4">Añadir un método de envío</option>
-                <option value="c5">Listar a los clientes con respecto al método de envío que les llega la mercancía</option>
-                <option value="c6">Obtener la cantidad de órdenes de venta por territorio</option>
-                <option value="c7">Obtener los clientes que han comprado asociados a que están recibiendo publicidad via e-mail</option>
-                <option value="c8">Obtener los tipos de razones de venta de los clientes suscritos a publicidad via e-mail</option>
-                <option value="c9">Obtener las razones de venta de los clientes no suscritos a publicidad via e-mail</option>
-            </select>
+        <div class="contenedor">
+            <form action="">
+                <div class="selectbox">
+                    <div class="select" id="select">
+                        <div class="contenido-select">
+                            <h1 class="titulo">Seleccione la consulta</h1>
+                            <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <i class="fas fa-angle-down"></i> <!--Flecha de seleccion-->
+                    </div>
+
+                    <!--Consulta 1-->
+                    <div class="opciones" id="opciones">
+                        <a href="#" class="opcion">
+                            <div class="contenido-opcion">
+                                <div class="textos">
+                                    <h1 class="titulo">1.	Obtener los 3 primeros empleados que han tenido las mayores ventas totales el año pasado.</h1>
+                                    <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                        </a>
+
+                    <!--Consulta 2-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">2.	El vendedor que vendió más por territorio.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 3-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">3.	Contar las órdenes de venta por tipo de envío.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 4-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">4.	Añadir un método de envió.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 5-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">5.	Listar a los clientes con respecto al método de envió que les llega la mercancía.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 6-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">6.	Obtener la cantidad de órdenes de venta por territorio.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 7-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">7.	Obtener los clientes que han comprado asociados a que están recibiendo publicidad por correo electrónico.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 8-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">8.	Obtener los tipos de razones de ventas de los clientes suscritos a publicidad por correo electrónico.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!--Consulta 9-->
+                    <a href="#" class="opcion">
+                        <div class="contenido-opcion">
+                            <div class="textos">
+                                <h1 class="titulo">9.	Obtener las razones de venta de los clientes no suscritos a publicidad por correo electrónico.</h1>
+                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+                </div>
+                <input type="hidden" name="consulta" id="inputSelected" value="">
+            </form>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
